<resources>
    <string name="error_start_session_failed">Unable to start a session with the Chromecast device.</string>
    <string name="error_session_ended">Lost connectivity with the Chromecast device.</string>
    <string name="error_ramp_command_failed">Failed to control the media.</string>
    <string name="error_no_session">Not currently connected to the Chromecast device.</string>
    <string name="album_year_hyphen">-</string>
    <string name="NsongsMalbums">%1$s, %2$s</string>
    <string name="no_network_connection">Not connected</string>
    <string name="authentication_failure_no_network">"You'll be connected to the Internet to authenticate your Music account."</string>
    <string name="authentication_failure">Not authenticated</string>
    <string name="authentication_failure_error">"Couldn't authenticate your Music account."</string>
    <string name="nautilus_purchase_failure_title">Purchase incomplete</string>
    <string name="nautilus_purchase_failure_body">Sorry, we were unable to complete the purchase at this time. Please try again later from Settings.</string>
    <string name="setup_server_failure_title">Server error</string>
    <string name="setup_server_failure_body">Sorry, we were unable to connect to the server to add the account. Please try again later from Settings.</string>
    <string name="finding_videos_for_track">Finding related videos for the track...</string>
    <string name="no_videos_for_track">No videos found for the track.</string>
    <string name="youtube_video_details_hd">%1$s | %2$,d views | HD</string>
    <string name="youtube_video_details_nonhd">%1$s | %2$,d views</string>
    <string name="youtube_video_duration_hms">%1$02d:%2$02d:%3$02d</string>
    <string name="youtube_video_duration_ms">%1$02d:%2$02d</string>
    <string name="youtube_player_initialization_error">There was an error initializing the YouTube player (%1$s)</string>
    <string name="positive_button_text">OK</string>
    <string name="negative_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="not_save_button_text">"Don't save"</string>
    <string name="offline_music_not_available_message">To keep music on device, go to the Albums, Playlists, or Artist views.</string>
    <string name="view_albums_button_text">Go to Albums</string>
    <string name="durationformatshort">%2$d:%5$02d</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="songs_all">All my songs</string>
    <string name="shuffle">Shuffle</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing...</string>
    <string name="library_options">Display options</string>
    <string name="manage_music">Choose on device music</string>
    <string name="options">Options</string>
    <string name="clear_queue">Clear queue</string>
    <string name="queue_cleared">Queue cleared</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_athome_queue">Add to %s</string>
    <string name="add_to_library">Add to library</string>
    <string name="accounts">Accounts</string>
    <string name="explore">Explore</string>
    <string name="exit_explore">Exit Explore</string>
    <string name="shop_artist">Shop for artist</string>
    <string name="show_offline_music_only">On device only</string>
    <string name="show_all_music">Show all music</string>
    <string name="new_playlist_title">Playlist name</string>
    <string name="add_to_playlist_title">Playlist name</string>
    <string name="rename_playlist_title">Rename \"%s\" to</string>
    <string name="search_section_header_artists">ARTISTS</string>
    <string name="search_section_header_albums">ALBUMS</string>
    <string name="search_section_header_songs">SONGS</string>
    <string name="search_section_header_playlists">PLAYLISTS</string>
    <string name="shuffle_all_songs">Shuffle all</string>
    <string name="stream_settings">Music settings</string>
    <string name="account_settings_key">account_settings_key</string>
    <string name="account_settings_title">Google account</string>
    <string name="no_account_selected_summary">Touch to choose account</string>
    <string name="account_selected_summary">Connect to Google Play using %s</string>
    <string name="stream_only_on_wifi_key">stream_only_on_wifi_key</string>
    <string name="stream_only_on_wifi_title">Stream via Wi-Fi only</string>
    <string name="stream_only_on_wifi_summary">"To reduce carrier data charges, don't stream over mobile networks"</string>
    <string name="stream_quality_key">stream_quality_key</string>
    <string name="stream_quality_title">Mobile networks stream quality</string>
    <string name="stream_quality_low">Low</string>
    <string name="stream_quality_normal">Normal</string>
    <string name="stream_quality_high">High</string>
    <string name="stream_quality_low_description">Lower quality uses less data</string>
    <string name="stream_quality_high_description">Higher quality uses more data</string>
    <string name="athome_key">athome_key</string>
    <string name="athome_title">Android@Home</string>
    <string name="athome_summary">Look for Android@Home devices.</string>
    <string name="athome_not_remote">To listen to this on Nexus Q, first upload it to your Google Play music library.</string>
    <string name="athome_move_top_menu">Play next</string>
    <string name="athome_remove_menu">Remove from queue</string>
    <string name="lock_screen_controls_key">lock_screen_controls_key</string>
    <string name="lock_screen_controls_title">Lock screen controls</string>
    <string name="lock_screen_controls_summary">Show music controls on top of the lock screen</string>
    <string name="debug_logs_key">debug_logs_key</string>
    <string name="debug_logs_title">Use debug logs</string>
    <string name="debug_logs_summary">Use debug logs</string>
    <string name="debug_logs_enable_warning_message">"Are you sure you want to enable the debug logs?
Sensitive information may be stored on the external storage. Changing this option will kill the app."</string>
    <string name="debug_logs_disable_warning_message">"Are you sure you want to disable the debug logs?
Changing this option will kill the app."</string>
    <string name="content_filter_key">content_filter_key</string>
    <string name="content_filter_title_radio">Block explicit songs in radio</string>
    <string name="content_filter_title_instant_mix">Block explicit songs in mixes</string>
    <string name="tungsten_settings">Nexus Q settings</string>
    <string name="offlinedl_only_on_wifi_key">offlinedl_on_wifi_key</string>
    <string name="offlinedl_only_on_wifi_title">Download via Wi-Fi only</string>
    <string name="offlinedl_only_on_wifi_summary">"To reduce carrier data charges, don't download over mobile networks"</string>
    <string name="cache_streamed_key">cache_streamed_key</string>
    <string name="cache_streamed_title">Cache during playback</string>
    <string name="cache_streamed_summary">Temporarily store music while streaming</string>
    <string name="autocache_key">autocache_key</string>
    <string name="autocache_title">Automatically cache</string>
    <string name="autocache_summary">Automatically cache music while charging and on Wi-Fi</string>
    <string name="download_queue_key">download_queue_key</string>
    <string name="download_queue_title">View download queue</string>
    <string name="download_queue_summary">List of music currently downloading</string>
    <string name="download_location_key">download_location_key</string>
    <string name="download_location_title">Download storage location</string>
    <string name="download_location_summary">Set where to store downloaded and cached music.</string>
    <string name="file_transfer_help_link">http://www.google.com/support/music/bin/answer.py?answer=1101500&amp;hl=%s</string>
    <string name="listen_offline_music_help_link">http://www.google.com/support/music/bin/answer.py?answer=1250232&amp;hl=%s</string>
    <string name="make_available_offline_help_link">http://www.google.com/support/music/bin/answer.py?answer=1250232&amp;hl=%s</string>
    <string name="help_title">Help</string>
    <string name="send_feedback">Send feedback</string>
    <string name="general_help_link">http://support.google.com/mobile/?p=music_default</string>
    <string name="offline_help_link">http://support.google.com/mobile/?p=music_offline</string>
    <string name="playlist_help_link">http://support.google.com/mobile/?p=music_playlists</string>
    <string name="nowplaying_help_link">http://support.google.com/mobile/?p=music_playing</string>
    <string name="music_version_title">Music version</string>
    <string name="music_version_summary">Unknown version</string>
    <string name="appwidget_text_separator">-</string>
    <string name="tutorial_free_music_heading">Get free music</string>
    <string name="tutorial_free_music_body">Browse hundreds of free tracks on Google Play by some of the biggest names in rock, hip-hop, and more.</string>
    <string name="tutorial_done_heading">Rock on!</string>
    <string name="tutorial_done_body">"Put your headphones on, it's time to start listening to all the world's music!"</string>
    <string name="tutorial_skip">Skip</string>
    <string name="tutorial_free_music">Get free songs</string>
    <string name="tutorial_get_started">Get started</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_stop">Stop</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_thumbsUp">Thumbs up</string>
    <string name="accessibility_thumbsDown">Thumbs down</string>
    <string name="accessibility_star1">One star</string>
    <string name="accessibility_star2">Two stars</string>
    <string name="accessibility_star3">Three stars</string>
    <string name="accessibility_star4">Four stars</string>
    <string name="accessibility_star5">Five stars</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Music home</string>
    <string name="license_key">licenses</string>
    <string name="license_title">Open source licenses</string>
    <string name="ringtone_title">Review ringtone</string>
    <string name="ringtone_done">DONE</string>
    <string name="settings_catergory_general_key">settings_catergory_general_key</string>
    <string name="settings_catergory_download_key">settings_catergory_download_key</string>
    <string name="settings_catergory_streaming_key">settings_catergory_streaming_key</string>
    <string name="settings_catergory_developer_key">settings_catergory_developer_key</string>
    <string name="settings_catergory_general_caps">GENERAL</string>
    <string name="settings_catergory_download_caps">DOWNLOADING</string>
    <string name="settings_catergory_streaming_caps">STREAMING</string>
    <string name="settings_catergory_developer_caps">DEVELOPER</string>
    <string name="equalizer_settings_key">equalizer_settings_key</string>
    <string name="equalizer_settings_title">Equalizer</string>
    <string name="equalizer_settings_summary">Fine tune your audio settings</string>
    <string name="clear_cache_settings_key">clear_cache_settings_key</string>
    <string name="clear_cache_settings_title">Clear Cache</string>
    <string name="clear_cache_settings_summary">Clear stored music</string>
    <string name="account_type_settings_key">account_type_settings_key</string>
    <string name="manage_nautilus_settings_key">manage_nautilus_settings_key</string>
</resources>