<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_white" android:id="@id/search" android:orderInCategory="2" android:title="@string/search" app:showAsAction="always" />
    <item android:id="@id/media_route_picker" app:showAsAction="always" app:actionProviderClass="com.google.android.music.ui.MusicMediaRouteActionProvider" />
    <item android:id="@id/refresh" android:title="@string/refresh" app:showAsAction="never" />
    <item android:id="@id/setting" android:title="@string/settings" app:showAsAction="never" />
    <item android:id="@id/help" android:title="@string/help_title" app:showAsAction="never" />
    <item android:id="@id/send_feedback" android:title="@string/send_feedback" app:showAsAction="never" />
</menu>