<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/ic_album_default_bg_blue" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ff33b5e5" android:id="@id/heading_text" android:paddingLeft="21.0dip" android:paddingTop="22.0dip" android:paddingRight="21.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tutorial_free_music_heading" />
        <View android:id="@id/divider" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_below="@id/heading_text" style="@style/SetupDivider" />
        <ScrollView android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/divider">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/description_text" android:paddingLeft="5.0dip" android:paddingTop="8.0dip" android:paddingRight="5.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tutorial_free_music_body" />
        </ScrollView>
    </RelativeLayout>
    <Button android:id="@id/free_song_button" android:layout_width="fill_parent" android:layout_height="@dimen/tutorial_bottom_bar_height" android:layout_marginLeft="21.0dip" android:layout_marginTop="21.0dip" android:layout_marginRight="21.0dip" android:text="@string/tutorial_free_music" style="?android:attr/buttonStyle" />
    <Button android:id="@id/skip_button" android:layout_width="fill_parent" android:layout_height="@dimen/tutorial_bottom_bar_height" android:layout_marginLeft="21.0dip" android:layout_marginRight="21.0dip" android:layout_marginBottom="21.0dip" android:text="@string/tutorial_skip" style="?android:attr/buttonStyle" />
</LinearLayout>