<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:layout_gravity="top" android:orientation="vertical" android:background="@drawable/appwidget_bg" android:padding="@dimen/widget_np_small_padding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:focusable="true" android:layout_width="fill_parent" android:layout_height="@dimen/widget_np_small_album_art_size" android:baselineAligned="false">
        <FrameLayout android:id="@id/albumartframe" android:focusable="true" android:layout_width="@dimen/widget_np_small_album_art_size" android:layout_height="@dimen/widget_np_small_album_art_size">
            <ImageView android:id="@id/albumart" android:layout_width="@dimen/widget_np_small_album_art_size" android:layout_height="@dimen/widget_np_small_album_art_size" android:scaleType="centerInside" />
            <FrameLayout android:id="@id/progress" android:focusable="true" android:visibility="gone" android:layout_width="@dimen/widget_np_small_album_art_size" android:layout_height="@dimen/widget_np_small_album_art_size">
                <ProgressBar android:layout_width="@dimen/widget_np_small_album_art_size" android:layout_height="@dimen/widget_np_small_album_art_size" style="@android:style/Widget.ProgressBar.Small" />
            </FrameLayout>
        </FrameLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="horizontal" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:focusable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageButton android:id="@id/ratings_off" android:background="@drawable/play_controls_music_widget_states_holo" android:padding="@dimen/widget_np_small_button_padding" android:focusable="true" android:visibility="invisible" android:layout_width="@dimen/widget_np_small_button_size" android:layout_height="@dimen/widget_np_small_button_size" android:src="@drawable/btn_rating_plus_off_jb_dark" android:scaleType="fitCenter" />
            <ImageButton android:id="@id/ratings_plus" android:background="@drawable/play_controls_music_widget_states_holo" android:padding="@dimen/widget_np_small_button_padding" android:focusable="true" android:visibility="gone" android:layout_width="@dimen/widget_np_small_button_size" android:layout_height="@dimen/widget_np_small_button_size" android:src="@drawable/btn_rating_plus_on_jb_dark" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_thumbsUp" />
            <ImageButton android:id="@id/ratings_minus" android:background="@drawable/play_controls_music_widget_states_holo" android:padding="@dimen/widget_np_small_button_padding" android:focusable="true" android:visibility="gone" android:layout_width="@dimen/widget_np_small_button_size" android:layout_height="@dimen/widget_np_small_button_size" android:src="@drawable/btn_rating_minus_on_jb_dark" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_thumbsDown" />
            <FrameLayout android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <ImageButton android:id="@id/prev" android:background="@drawable/play_controls_music_widget_states_holo" android:padding="@dimen/widget_np_small_button_padding" android:focusable="true" android:layout_width="@dimen/widget_np_small_button_size" android:layout_height="@dimen/widget_np_small_button_size" android:src="@drawable/btn_playback_rew_normal_jb_dark" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_prev" />
            <FrameLayout android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <ImageButton android:id="@id/play" android:background="@drawable/play_controls_music_widget_states_holo" android:padding="@dimen/widget_np_small_button_padding" android:focusable="true" android:layout_width="@dimen/widget_np_small_button_size" android:layout_height="@dimen/widget_np_small_button_size" android:src="@drawable/btn_playback_play_normal_jb_dark" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_play" />
            <ImageButton android:id="@id/pause" android:background="@drawable/play_controls_music_widget_states_holo" android:padding="@dimen/widget_np_small_button_padding" android:focusable="true" android:visibility="gone" android:layout_width="@dimen/widget_np_small_button_size" android:layout_height="@dimen/widget_np_small_button_size" android:src="@drawable/btn_playback_pause_normal_jb_dark" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_pause" />
            <ImageButton android:id="@id/stop" android:background="@drawable/play_controls_music_widget_states_holo" android:padding="@dimen/widget_np_small_button_padding" android:focusable="true" android:visibility="gone" android:layout_width="@dimen/widget_np_small_button_size" android:layout_height="@dimen/widget_np_small_button_size" android:src="@drawable/btn_playback_stop_normal_jb_dark" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_stop" />
            <FrameLayout android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <ImageButton android:id="@id/next" android:background="@drawable/play_controls_music_widget_states_holo" android:padding="@dimen/widget_np_small_button_padding" android:focusable="true" android:layout_width="@dimen/widget_np_small_button_size" android:layout_height="@dimen/widget_np_small_button_size" android:src="@drawable/btn_playback_ff_normal_jb_dark" android:scaleType="fitCenter" android:contentDescription="@string/accessibility_next" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:background="@color/appwidget_separator" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="top" android:layout_gravity="left" android:orientation="horizontal" android:paddingLeft="8.0dip" android:paddingTop="@dimen/widget_np_small_text_padding_top" android:paddingRight="8.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:textColor="@color/appwidget_text_primary" android:ellipsize="marquee" android:id="@id/trackname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="bold" android:textColor="@color/appwidget_text_secondary" android:ellipsize="marquee" android:id="@id/text_separator" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/appwidget_text_separator" android:singleLine="true" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/appwidget_text_secondary" android:ellipsize="marquee" android:id="@id/artist" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/appwidget_text_primary" android:ellipsize="marquee" android:id="@id/error" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
    </LinearLayout>
</LinearLayout>